src/toggl_api.h

// Models

    typedef struct {
        uint64_t ID;
        int64_t DurationInSeconds;
        char_t *Description;
        char_t *ProjectAndTaskLabel;
        char_t *TaskLabel;
        char_t *ProjectLabel;
        char_t *ClientLabel;
        uint64_t WID;
        uint64_t PID;
        uint64_t TID;
        char_t *Duration;
        char_t *Color;
        char_t *GUID;
        bool_t Billable;
        // Redmine TimeEntryActivity id (Redmine fork).
        uint64_t ActivityID;
        char_t *Tags;
        uint64_t Started;
        uint64_t Ended;
        char_t *StartTimeString;
        char_t *EndTimeString;
        uint64_t UpdatedAt;
        bool_t DurOnly;
        // In case it's a header
        char_t *DateHeader;
        char_t *DateDuration;
        bool_t IsHeader;
        // Additional fields; only when in time entry editor
        bool_t CanAddProjects;
        bool_t CanSeeBillable;
        uint64_t DefaultWID;
        char_t *WorkspaceName;
        // If syncing a time entry ended with an error,
        // the error is attached to the time entry
        char_t *Error;
        bool_t Locked;
        // Indicates if time entry is not synced to server
        bool_t Unsynced;
        // Group attributes
        bool_t Group;
        bool_t GroupOpen;
        char_t *GroupName;
        char_t *GroupDuration;
        uint64_t GroupItemCount;
        // To categorize to 15-minute batches
        uint64_t RoundedStart;
        uint64_t RoundedEnd;
        // Next in list
        void *Next;
    } TogglTimeEntryView;
    typedef struct {
        int64_t ID;
        char_t *Terms;
        char_t *ProjectAndTaskLabel;
        char_t *StartTime;
        char_t *EndTime;
        uint8_t DaysOfWeek;
        void *Next;
    } TogglAutotrackerRuleView;
    typedef struct {
        int64_t ID;
        char_t *Name;
        bool_t VatApplicable;
        char_t *VatRegex;
        char_t *VatPercentage;
        char_t *Code;
        void *Next;
    } TogglCountryView;
    typedef void (*TogglDisplayPromotion)(
        const int64_t promotion_type);
    typedef void (*TogglDisplayTimerState)(
        TogglTimeEntryView *te);
    typedef void (*TogglDisplayIdleNotification)(
        const char_t *guid,
        const char_t *since,
        const char_t *duration,
        const int64_t started,
        const char_t *description,
        const char_t *project,
        const char_t *task,
        const char_t *projectColor);
    typedef char_t * string_list_t[];
    typedef void (*TogglDisplayAutotrackerRules)(
        TogglAutotrackerRuleView *first,
        const uint64_t title_count,
        string_list_t title_list);
    typedef void (*TogglDisplayProjectColors)(
        string_list_t color_list,
        const uint64_t color_count);
    typedef void (*TogglDisplayCountries)(
        TogglCountryView *first);
    TOGGL_EXPORT void toggl_on_timer_state(
        void *context,
        TogglDisplayTimerState cb);
    TOGGL_EXPORT void toggl_on_idle_notification(
        void *context,
        TogglDisplayIdleNotification cb);
    TOGGL_EXPORT void toggl_on_autotracker_rules(
        void *context,
        TogglDisplayAutotrackerRules cb);
    TOGGL_EXPORT void toggl_on_project_colors(
        void *context,
        TogglDisplayProjectColors cb);
    TOGGL_EXPORT void toggl_on_countries(
        void *context,
        TogglDisplayCountries cb);
    TOGGL_EXPORT void toggl_on_promotion(
        void *context,
        TogglDisplayPromotion cb);
    // After UI callbacks are configured, start pumping UI events

    TOGGL_EXPORT bool_t toggl_ui_start(
        void *context);
    // User interaction with the app

    TOGGL_EXPORT bool_t toggl_login(
        void *context,
        const char_t *email,
        const char_t *password);
    TOGGL_EXPORT bool_t toggl_login_async(
        void *context,
        const char_t *email,
        const char_t *password);
    TOGGL_EXPORT bool_t toggl_signup(
        void *context,
        const char_t *email,
        const char_t *password,
        const uint64_t country_id);
    TOGGL_EXPORT bool_t toggl_signup_async(
        void *context,
        const char_t *email,
        const char_t *password,
        const uint64_t country_id);
    TOGGL_EXPORT void toggl_password_forgot(
        void *context);
    TOGGL_EXPORT void toggl_tos(
        void *context);
    TOGGL_EXPORT void toggl_privacy_policy(
        void *context);
    TOGGL_EXPORT bool_t toggl_accept_tos(
        void *context);
    TOGGL_EXPORT void toggl_get_support(
        void *context,
        const int type);
    TOGGL_EXPORT void toggl_search_help_articles(
        void *context,
        const char_t *keywords);
    TOGGL_EXPORT void toggl_view_time_entry_list(
        void *context);
    TOGGL_EXPORT void toggl_view_timeline_data(
        void *context);
    TOGGL_EXPORT void toggl_view_timeline_prev_day(
        void *context);
    TOGGL_EXPORT void toggl_view_timeline_next_day(
        void *context);
    TOGGL_EXPORT void toggl_view_timeline_current_day(
        void *context);
    TOGGL_EXPORT void toggl_view_timeline_set_day(
        void *context,
        const int64_t unix_timestamp);
    TOGGL_EXPORT void toggl_edit(
        void *context,
        const char_t *guid,
        const bool_t edit_running_time_entry,
        const char_t *focused_field_name);