app/lib/src/native/toggl_api_generated.dart


  late final _toggl_on_timer_statePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayTimerState)
        >
      >('toggl_on_timer_state');
  late final _toggl_on_timer_state = _toggl_on_timer_statePtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayTimerState)
      >();

  void toggl_on_idle_notification(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayIdleNotification cb,
  ) {
    return _toggl_on_idle_notification(context, cb);
  }

  late final _toggl_on_idle_notificationPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayIdleNotification)
        >
      >('toggl_on_idle_notification');
  late final _toggl_on_idle_notification = _toggl_on_idle_notificationPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayIdleNotification)
      >();

  void toggl_on_autotracker_rules(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayAutotrackerRules cb,
  ) {
    return _toggl_on_autotracker_rules(context, cb);
  }

  late final _toggl_on_autotracker_rulesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayAutotrackerRules)
        >
      >('toggl_on_autotracker_rules');
  late final _toggl_on_autotracker_rules = _toggl_on_autotracker_rulesPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayAutotrackerRules)
      >();

  void toggl_on_project_colors(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayProjectColors cb,
  ) {
    return _toggl_on_project_colors(context, cb);
  }

  late final _toggl_on_project_colorsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayProjectColors)
        >
      >('toggl_on_project_colors');
  late final _toggl_on_project_colors = _toggl_on_project_colorsPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayProjectColors)
      >();

  void toggl_on_countries(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayCountries cb,
  ) {
    return _toggl_on_countries(context, cb);
  }

  late final _toggl_on_countriesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayCountries)
        >
      >('toggl_on_countries');
  late final _toggl_on_countries = _toggl_on_countriesPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayCountries)
      >();

  void toggl_on_promotion(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayPromotion cb,
  ) {
    return _toggl_on_promotion(context, cb);
  }

  late final _toggl_on_promotionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayPromotion)
        >
      >('toggl_on_promotion');
  late final _toggl_on_promotion = _toggl_on_promotionPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayPromotion)
      >();

  /// After UI callbacks are configured, start pumping UI events
  int toggl_ui_start(ffi.Pointer<ffi.Void> context) {
    return _toggl_ui_start(context);
  }

  late final _toggl_ui_startPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_ui_start',
      );
  late final _toggl_ui_start = _toggl_ui_startPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  /// User interaction with the app
  int toggl_login(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> email,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _toggl_login(context, email, password);
  }

  late final _toggl_loginPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('toggl_login');
  late final _toggl_login = _toggl_loginPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int toggl_login_async(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> email,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _toggl_login_async(context, email, password);
  }

  late final _toggl_login_asyncPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('toggl_login_async');
  late final _toggl_login_async = _toggl_login_asyncPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int toggl_signup(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> email,
    ffi.Pointer<ffi.Char> password,
    int country_id,
  ) {
    return _toggl_signup(context, email, password, country_id);
  }

  late final _toggl_signupPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
          )
        >
      >('toggl_signup');
  late final _toggl_signup = _toggl_signupPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  int toggl_signup_async(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> email,
    ffi.Pointer<ffi.Char> password,
    int country_id,
  ) {
    return _toggl_signup_async(context, email, password, country_id);
  }

  late final _toggl_signup_asyncPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
          )
        >
      >('toggl_signup_async');
  late final _toggl_signup_async = _toggl_signup_asyncPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  void toggl_password_forgot(ffi.Pointer<ffi.Void> context) {
    return _toggl_password_forgot(context);
  }

  late final _toggl_password_forgotPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_password_forgot',
      );
  late final _toggl_password_forgot = _toggl_password_forgotPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void toggl_tos(ffi.Pointer<ffi.Void> context) {
    return _toggl_tos(context);
  }

  late final _toggl_tosPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_tos',
      );
  late final _toggl_tos = _toggl_tosPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void toggl_privacy_policy(ffi.Pointer<ffi.Void> context) {
    return _toggl_privacy_policy(context);
  }

  late final _toggl_privacy_policyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_privacy_policy',
      );
  late final _toggl_privacy_policy = _toggl_privacy_policyPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int toggl_accept_tos(ffi.Pointer<ffi.Void> context) {
    return _toggl_accept_tos(context);
  }

  late final _toggl_accept_tosPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_accept_tos',
      );
  late final _toggl_accept_tos = _toggl_accept_tosPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void toggl_get_support(ffi.Pointer<ffi.Void> context, int type) {
    return _toggl_get_support(context, type);
  }

  late final _toggl_get_supportPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_get_support');
  late final _toggl_get_support = _toggl_get_supportPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  void toggl_search_help_articles(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> keywords,
  ) {
    return _toggl_search_help_articles(context, keywords);
  }

  late final _toggl_search_help_articlesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('toggl_search_help_articles');
  late final _toggl_search_help_articles = _toggl_search_help_articlesPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
      >();

  void toggl_view_time_entry_list(ffi.Pointer<ffi.Void> context) {
    return _toggl_view_time_entry_list(context);
  }

  late final _toggl_view_time_entry_listPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_view_time_entry_list',
      );
  late final _toggl_view_time_entry_list = _toggl_view_time_entry_listPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void toggl_view_timeline_data(ffi.Pointer<ffi.Void> context) {
    return _toggl_view_timeline_data(context);
  }

  late final _toggl_view_timeline_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_view_timeline_data',
      );
  late final _toggl_view_timeline_data = _toggl_view_timeline_dataPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void toggl_view_timeline_prev_day(ffi.Pointer<ffi.Void> context) {
    return _toggl_view_timeline_prev_day(context);
  }

  late final _toggl_view_timeline_prev_dayPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_view_timeline_prev_day',
      );
  late final _toggl_view_timeline_prev_day = _toggl_view_timeline_prev_dayPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void toggl_view_timeline_next_day(ffi.Pointer<ffi.Void> context) {
    return _toggl_view_timeline_next_day(context);
  }

  late final _toggl_view_timeline_next_dayPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_view_timeline_next_day',
      );
  late final _toggl_view_timeline_next_day = _toggl_view_timeline_next_dayPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void toggl_view_timeline_current_day(ffi.Pointer<ffi.Void> context) {
    return _toggl_view_timeline_current_day(context);
  }

  late final _toggl_view_timeline_current_dayPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_view_timeline_current_day',
      );
  late final _toggl_view_timeline_current_day =
      _toggl_view_timeline_current_dayPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void toggl_view_timeline_set_day(
    ffi.Pointer<ffi.Void> context,
    int unix_timestamp,
  ) {
    return _toggl_view_timeline_set_day(context, unix_timestamp);
  }

  late final _toggl_view_timeline_set_dayPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int64)>
      >('toggl_view_timeline_set_day');
  late final _toggl_view_timeline_set_day = _toggl_view_timeline_set_dayPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  void toggl_edit(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
    int edit_running_time_entry,
    ffi.Pointer<ffi.Char> focused_field_name,
  ) {
    return _toggl_edit(
      context,
      guid,
      edit_running_time_entry,
      focused_field_name,
    );
  }
